// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно отдает MMMInfo по Params при заданной марке 1`] = `
Object {
  "mark": Object {
    "count": 440,
    "cyrillic_name": "Форд",
    "id": "FORD",
    "itemFilterParams": Object {
      "mark": "FORD",
    },
    "logo": Object {
      "default": "picture-of-cat",
    },
    "name": "Ford",
    "numeric_id": 3152,
    "popular": true,
    "reviews_count": 3824,
    "year_from": 1908,
    "year_to": 2021,
  },
}
`;

exports[`правильно отдает MMMInfo по Params при заданной марке, модели 1`] = `
Object {
  "mark": Object {
    "count": 440,
    "cyrillic_name": "Форд",
    "id": "FORD",
    "itemFilterParams": Object {
      "mark": "FORD",
    },
    "logo": Object {
      "default": "picture-of-cat",
    },
    "name": "Ford",
    "numeric_id": 3152,
    "popular": true,
    "reviews_count": 3824,
    "year_from": 1908,
    "year_to": 2021,
  },
  "model": Object {
    "count": 9,
    "cyrillic_name": "ЭкоСпорт",
    "id": "ECOSPORT",
    "itemFilterParams": Object {
      "model": "ECOSPORT",
    },
    "name": "EcoSport",
    "nameplates": Array [],
    "popular": false,
    "year_from": 2014,
    "year_to": 2020,
  },
}
`;

exports[`правильно отдает MMMInfo по Params при заданной марке, модели, поколении 1`] = `
Object {
  "generation": Object {
    "count": 2,
    "id": "20104320",
    "itemFilterParams": Object {
      "super_gen": "20104320",
    },
    "mobilePhoto": "picture-of-cat",
    "name": "I",
    "photo": "picture-of-cat",
    "yearFrom": 2014,
    "yearTo": 2018,
  },
  "mark": Object {
    "count": 440,
    "cyrillic_name": "Форд",
    "id": "FORD",
    "itemFilterParams": Object {
      "mark": "FORD",
    },
    "logo": Object {
      "default": "picture-of-cat",
    },
    "name": "Ford",
    "numeric_id": 3152,
    "popular": true,
    "reviews_count": 3824,
    "year_from": 1908,
    "year_to": 2021,
  },
  "model": Object {
    "count": 9,
    "cyrillic_name": "ЭкоСпорт",
    "id": "ECOSPORT",
    "itemFilterParams": Object {
      "model": "ECOSPORT",
    },
    "name": "EcoSport",
    "nameplates": Array [],
    "popular": false,
    "year_from": 2014,
    "year_to": 2020,
  },
}
`;
